fixes to footer css and spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -25,7 +25,7 @@ html, body {
 	height: 100%;
 	margin: 0 auto -60px;
 }
-#push, footer {
+#push {
 	height: 60px;
 }
 footer {
@@ -34,6 +34,7 @@ footer {
 	padding: 10px;
 	border-top: 1px solid #ccc;
 	margin-top: 2em;
+	height: auto;
 }
 @media (max-width: 767px) {
 	footer {
